--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/wastegas/calculator/issues"
   },
-  "homepage": "https://github.com/wastegas/calculator#readme"
+  "homepage": "https://github.com/wastegas/calculator#readme",
+  "devDependencies": {
+    "webpack": "^2.5.1",
+    "webpack-dev-server": "^2.4.5"
+  }
 }
