--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
   },
   "homepage": "https://github.com/wastegas/calculator#readme",
   "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
