--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
+    "jest": "^20.0.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
