--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "react redux calculator",
   "main": "src/index.js",
   "scripts": {
-	"webpack": "webpack --watch",
+    "webpack": "webpack --watch",
     "test": "jest"
   },
   "repository": {
@@ -31,6 +31,9 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "jest": "^20.0.0",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
