--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --watch",
-	"start": "webpack-dev-server -d --hot --config webpack.config.js --watch",
+    "start": "webpack-dev-server -d --hot --config webpack.config.js --watch",
     "test": "jest"
   },
   "repository": {
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/wastegas/calculator#readme",
   "devDependencies": {
     "babel-core": "^6.24.1",
+    "babel-jest": "^20.0.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
