--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "jest": "^20.0.0",
+    "node-sass": "^4.5.3",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
