--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "webpack --watch",
     "start": "webpack-dev-server -d --hot --config webpack.config.js --watch",
+	"production": "NODE_ENV=production webpack",
     "test": "jest"
   },
   "repository": {
@@ -45,6 +46,7 @@
     "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
